samples/_failures_safe/1761040187_df80e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_350a588d.c: In function ‘display_graph’:
./samples/SAFE/__tmp_350a588d.c:160:34: error: expected ‘;’ at end of input
  160 |         for (int j = 0; j < graph
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_350a588d.c:160:9: error: expected declaration or statement at end of input
  160 |         for (int j = 0; j < graph
      |         ^~~
./samples/SAFE/__tmp_350a588d.c:160:9: error: expected declaration or statement at end of input
